// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commit history component Must render a list of commits 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CommitHistory
    commits={
      Object {
        "2015": Array [
          Object {
            "_id": "59d678d9f51fea02ea1209b7",
            "date": "2015-06-04T23:00:00.000Z",
            "description": "Description...",
            "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
            "hashAlias": "d909438",
            "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
            "title": "A title",
          },
        ],
        "2016": Array [
          Object {
            "_id": "59d678d9f51fea02ea1209b7",
            "date": "2016-06-04T23:00:00.000Z",
            "description": "Description...",
            "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
            "hashAlias": "d909438",
            "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
            "title": "A title",
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <styled.div>
          <styled.div>
            <Icon
              icon="circle-o"
            />
            <styled.div>
              <span>
                Commits on 
              </span>
              2016
            </styled.div>
          </styled.div>
          <CommitGroup
            commits={
              Array [
                Object {
                  "_id": "59d678d9f51fea02ea1209b7",
                  "date": "2016-06-04T23:00:00.000Z",
                  "description": "Description...",
                  "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                  "hashAlias": "d909438",
                  "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                  "title": "A title",
                },
              ]
            }
          />
        </styled.div>,
        <styled.div>
          <styled.div>
            <Icon
              icon="circle-o"
            />
            <styled.div>
              <span>
                Commits on 
              </span>
              2015
            </styled.div>
          </styled.div>
          <CommitGroup
            commits={
              Array [
                Object {
                  "_id": "59d678d9f51fea02ea1209b7",
                  "date": "2015-06-04T23:00:00.000Z",
                  "description": "Description...",
                  "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                  "hashAlias": "d909438",
                  "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                  "title": "A title",
                },
              ]
            }
          />
        </styled.div>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "2016",
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div>
              <Icon
                icon="circle-o"
              />
              <styled.div>
                <span>
                  Commits on 
                </span>
                2016
              </styled.div>
            </styled.div>,
            <CommitGroup
              commits={
                Array [
                  Object {
                    "_id": "59d678d9f51fea02ea1209b7",
                    "date": "2016-06-04T23:00:00.000Z",
                    "description": "Description...",
                    "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                    "hashAlias": "d909438",
                    "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                    "title": "A title",
                  },
                ]
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Icon
                  icon="circle-o"
                />,
                <styled.div>
                  <span>
                    Commits on 
                  </span>
                  2016
                </styled.div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "icon": "circle-o",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <span>
                      Commits on 
                    </span>,
                    "2016",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Commits on ",
                    },
                    "ref": null,
                    "rendered": "Commits on ",
                    "type": "span",
                  },
                  "2016",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "commits": Array [
                Object {
                  "_id": "59d678d9f51fea02ea1209b7",
                  "date": "2016-06-04T23:00:00.000Z",
                  "description": "Description...",
                  "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                  "hashAlias": "d909438",
                  "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                  "title": "A title",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2015",
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <styled.div>
              <Icon
                icon="circle-o"
              />
              <styled.div>
                <span>
                  Commits on 
                </span>
                2015
              </styled.div>
            </styled.div>,
            <CommitGroup
              commits={
                Array [
                  Object {
                    "_id": "59d678d9f51fea02ea1209b7",
                    "date": "2015-06-04T23:00:00.000Z",
                    "description": "Description...",
                    "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                    "hashAlias": "d909438",
                    "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                    "title": "A title",
                  },
                ]
              }
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": null,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Icon
                  icon="circle-o"
                />,
                <styled.div>
                  <span>
                    Commits on 
                  </span>
                  2015
                </styled.div>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": null,
                "nodeType": "function",
                "props": Object {
                  "icon": "circle-o",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": null,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    <span>
                      Commits on 
                    </span>,
                    "2015",
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": null,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Commits on ",
                    },
                    "ref": null,
                    "rendered": "Commits on ",
                    "type": "span",
                  },
                  "2015",
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": null,
            "nodeType": "function",
            "props": Object {
              "commits": Array [
                Object {
                  "_id": "59d678d9f51fea02ea1209b7",
                  "date": "2015-06-04T23:00:00.000Z",
                  "description": "Description...",
                  "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                  "hashAlias": "d909438",
                  "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                  "title": "A title",
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <styled.div>
            <styled.div>
              <Icon
                icon="circle-o"
              />
              <styled.div>
                <span>
                  Commits on 
                </span>
                2016
              </styled.div>
            </styled.div>
            <CommitGroup
              commits={
                Array [
                  Object {
                    "_id": "59d678d9f51fea02ea1209b7",
                    "date": "2016-06-04T23:00:00.000Z",
                    "description": "Description...",
                    "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                    "hashAlias": "d909438",
                    "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                    "title": "A title",
                  },
                ]
              }
            />
          </styled.div>,
          <styled.div>
            <styled.div>
              <Icon
                icon="circle-o"
              />
              <styled.div>
                <span>
                  Commits on 
                </span>
                2015
              </styled.div>
            </styled.div>
            <CommitGroup
              commits={
                Array [
                  Object {
                    "_id": "59d678d9f51fea02ea1209b7",
                    "date": "2015-06-04T23:00:00.000Z",
                    "description": "Description...",
                    "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                    "hashAlias": "d909438",
                    "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                    "title": "A title",
                  },
                ]
              }
            />
          </styled.div>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "2016",
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <Icon
                  icon="circle-o"
                />
                <styled.div>
                  <span>
                    Commits on 
                  </span>
                  2016
                </styled.div>
              </styled.div>,
              <CommitGroup
                commits={
                  Array [
                    Object {
                      "_id": "59d678d9f51fea02ea1209b7",
                      "date": "2016-06-04T23:00:00.000Z",
                      "description": "Description...",
                      "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                      "hashAlias": "d909438",
                      "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                      "title": "A title",
                    },
                  ]
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Icon
                    icon="circle-o"
                  />,
                  <styled.div>
                    <span>
                      Commits on 
                    </span>
                    2016
                  </styled.div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "icon": "circle-o",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <span>
                        Commits on 
                      </span>,
                      "2016",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Commits on ",
                      },
                      "ref": null,
                      "rendered": "Commits on ",
                      "type": "span",
                    },
                    "2016",
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "commits": Array [
                  Object {
                    "_id": "59d678d9f51fea02ea1209b7",
                    "date": "2016-06-04T23:00:00.000Z",
                    "description": "Description...",
                    "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                    "hashAlias": "d909438",
                    "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                    "title": "A title",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2015",
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <styled.div>
                <Icon
                  icon="circle-o"
                />
                <styled.div>
                  <span>
                    Commits on 
                  </span>
                  2015
                </styled.div>
              </styled.div>,
              <CommitGroup
                commits={
                  Array [
                    Object {
                      "_id": "59d678d9f51fea02ea1209b7",
                      "date": "2015-06-04T23:00:00.000Z",
                      "description": "Description...",
                      "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                      "hashAlias": "d909438",
                      "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                      "title": "A title",
                    },
                  ]
                }
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": null,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  <Icon
                    icon="circle-o"
                  />,
                  <styled.div>
                    <span>
                      Commits on 
                    </span>
                    2015
                  </styled.div>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "function",
                  "props": Object {
                    "icon": "circle-o",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": null,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      <span>
                        Commits on 
                      </span>,
                      "2015",
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": null,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Commits on ",
                      },
                      "ref": null,
                      "rendered": "Commits on ",
                      "type": "span",
                    },
                    "2015",
                  ],
                  "type": [Function],
                },
              ],
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": null,
              "nodeType": "function",
              "props": Object {
                "commits": Array [
                  Object {
                    "_id": "59d678d9f51fea02ea1209b7",
                    "date": "2015-06-04T23:00:00.000Z",
                    "description": "Description...",
                    "hash": "d9094385acf7d47c7c5c6f7ceb6866b54f9b602d",
                    "hashAlias": "d909438",
                    "image": "https://avatars0.githubusercontent.com/u/4216535?v=4&s=72",
                    "title": "A title",
                  },
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Commit history component Must render an empty list properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CommitHistory
    commits={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
    },
    "ref": null,
    "rendered": Array [],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
      },
      "ref": null,
      "rendered": Array [],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
